# fastroll

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  codecov.yml  gpcov_equations.json
asn-types/: Cargo.toml
asn-types/src/: accumulate.rs  common.rs  lib.rs  preimages.rs  reports.rs  safrole.rs
asn-types/src/types/: accumulate.rs  assurances.rs  authorizations.rs  common.rs  disputes.rs  history.rs  mod.rs  preimages.rs  reports.rs  safrole.rs  statistics.rs
block/: Cargo.toml
block/src/: ancestors.rs  header.rs  header_db.rs  lib.rs  post_state_root_db.rs  xt_db.rs
block/src/extrinsics/: manager.rs  mod.rs
block/src/state/: global_state.rs  mod.rs  state_retriever.rs
block/src/trie/: merkle_trie.rs  serialization.rs
block/src/types/: block.rs  mod.rs
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs  versions.rs
codec/fr-codec/: Cargo.toml
codec/fr-codec/src/: lib.rs
common/: Cargo.toml
common/erasure-coding/: Cargo.toml
common/erasure-coding/src/: lib.rs
common/limited-vec/: Cargo.toml
common/limited-vec/src/: lib.rs
common/src/: constants.rs  lib.rs  structs.rs  types.rs  versions.rs
common/src/chain_spec/: full.rs  mod.rs  small.rs  tiny.rs
common/src/constants/: constants_encoder.rs  mod.rs
common/src/data_structures/: sorted_limited_tickets.rs
common/src/types/: mod.rs  ticket.rs
common/src/utils/: constants_encoder.rs  mod.rs  serde.rs  tracing.rs  zero_pad.rs
conformance-tests/: Cargo.toml  build.rs
conformance-tests/asn-types/: Cargo.toml
conformance-tests/asn-types/src/: accumulate.rs  authorizations.rs  history.rs  safrole.rs
conformance-tests/fuzz-target/: Cargo.toml
conformance-tests/fuzz-target/src/: lib.rs  runner.rs  utils.rs
conformance-tests/fuzz-traces/1755621252/: 00000008.json  00000009.json
conformance-tests/src/: harness.rs  importer_harness.rs  lib.rs  pvm_harness.rs  serde_utils.rs  state_transition_framework.rs  utils.rs
conformance-tests/src/asn_types/: accumulate.rs  assurances.rs  authorizations.rs  common.rs  disputes.rs  history.rs  mod.rs  preimages.rs  reports.rs  safrole.rs  statistics.rs
conformance-tests/src/err_map/: assurances.rs  disputes.rs  mod.rs  preimages.rs  reports.rs  safrole.rs
conformance-tests/tests/: accumulate.rs  assurances.rs  authorizations.rs  block_importer.rs  codec.rs  disputes.rs  erasure.rs  history.rs  preimages.rs  pvm.rs  reports.rs  safrole.rs  shuffle.rs  statistics.rs  stf_tests.rs
conformance-tests/tests/stf/: accumulate.rs  assurances.rs  authorizations.rs  disputes.rs  history.rs  preimages.rs  reports.rs  safrole.rs  statistics.rs
crypto/: Cargo.toml
crypto/src/: ed25519.rs  error.rs  hash.rs  lib.rs  ring.rs  traits.rs  types.rs  utils.rs  vrf.rs
crypto/src/bandersnatch/: mod.rs  ring.rs  vrf.rs  vrf_core.rs
crypto/src/signers/: ed25519.rs  mod.rs  traits.rs
crypto/src/types/: mod.rs  public_keys.rs  secret_keys.rs  signatures.rs  utils.rs  validator_keys.rs
crypto/src/vrf/: bandersnatch_vrf.rs  (+3 more)
db/: Cargo.toml
db/src/: config.rs  core.rs  header_db.rs  kvdb.rs  lib.rs  manager.rs  merkle_db.rs  rjam_db.rs  state_db.rs  wrappers.rs
extrinsics/: Cargo.toml
extrinsics/src/: lib.rs  manager.rs
fuzz/: Cargo.toml
fuzz/src/: fuzz_target.rs  fuzzer.rs  lib.rs  tests.rs  types.rs  utils.rs  versions.rs
host-interface/: Cargo.toml
host-interface/src/: contexts.rs  host_functions.rs  inner_vm.rs  lib.rs  utils.rs
integration/: Cargo.toml  build.rs
integration/asn-types/: Cargo.toml
integration/src/: importer_harness.rs  lib.rs  pvm_harness.rs  stf_harness.rs
integration/tests/: block_importer.rs  codec.rs  ed25519_consensus.rs  erasure.rs  pvm.rs  ring_cache.rs  shuffle.rs
merkle/: Cargo.toml
merkle-trie/: Cargo.toml
merkle-trie/src/: codec.rs  error.rs  lib.rs  merkle_db.rs  staging.rs  types.rs  utils.rs
merkle/src/: common.rs  constant_depth_tree.rs  lib.rs  mmr.rs  well_balanced_tree.rs
network/: Cargo.toml
network/src/: endpoint.rs  error.rs  lib.rs  manager.rs  peers.rs  streams.rs  types.rs  utils.rs
node/: Cargo.toml
node-bench/: Cargo.toml
node-bench/benches/: block_importer.rs
node/fuzz-target/: Cargo.toml
node/src/: cli.rs  config.rs  genesis.rs  init.rs  jam_node.rs  lib.rs  main.rs  node.rs  runner.rs  simple_forking.rs  ticket_store.rs  timeslot_scheduler.rs  utils.rs
node/tests/: state_transition_e2e.rs  test_actors_e2e.rs  test_roles_e2e.rs
pvm/: Cargo.toml
pvm-core/: Cargo.toml
pvm-core/src/: constants.rs  core.rs  hostcall.rs  instructions.rs  lib.rs  memory.rs  program_decoder.rs  register.rs  types.rs  vm_core.rs
pvm-invocation/: Cargo.toml
pvm-invocation/src/: lib.rs
pvm/pvm-core/: Cargo.toml
pvm/pvm-host/: Cargo.toml
pvm/pvm-interface/: Cargo.toml
pvm/pvm-invocation/: Cargo.toml
pvm/pvm-types/: Cargo.toml
pvm/src/: constants.rs  host.rs  lib.rs  opcode.rs  vm.rs
state/: Cargo.toml
state-merkle/: Cargo.toml
state-merkle/src/: affected_nodes.rs  codec.rs  error.rs  lib.rs  merkle_db.rs  staging.rs  state_db.rs  test_utils.rs  tests.rs  types.rs  utils.rs  write_set.rs
state/src/: cache.rs  config.rs  error.rs  global_state.rs  lib.rs  manager.rs  merkle_manager.rs  provider.rs  state_db.rs  state_manager.rs  state_retriever.rs  state_utils.rs  test_utils.rs  tests.rs
state/state-merkle/: Cargo.toml
state/state-merkle-v2/: Cargo.toml
state/tests/: merkle_db_test.rs  merkle_fuzz_test.rs
storage/: Cargo.toml
storage/src/: lib.rs  node_storage.rs  server_trait.rs
test-utils/: Cargo.toml
test-utils/asn-types/: Cargo.toml
test-utils/src/: importer_harness.rs  lib.rs  pvm_harness.rs  state_display.rs  stf_harness.rs
tests/: Cargo.toml  integration_tests.rs
tests/safrole/: asn_types.rs  conformance_tests.rs  utils.rs
tests/src/: asn_types.rs  common_asn_types.rs  lib.rs  serde_utils.rs  test_trait.rs  test_utils.rs
transition/: Cargo.toml
transition/src/: error.rs  lib.rs  ring_cache.rs
transition/tests/: state_transition_e2e.rs
types/: Cargo.toml
types/src/: lib.rs  state_utils.rs
(+466 files in other folders)
