[workspace]
resolver = "2"

members = [
    "block",
    "clock",
    "codec/fr-codec",
    "codec/fr-codec-derive",
    "common",
    "common/limited-vec",
    "conformance-tests",
    "crypto",
    "db",
    "extrinsics",
    "merkle",
    "network",
    "node",
    "pvm/pvm-core",
    "pvm/pvm-host",
    "pvm/pvm-interface",
    "pvm/pvm-invocation",
    "pvm/pvm-types",
    "state",
    "state/state-merkle",
    "storage",
    "transition",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Internal dependencies
fr-block = { path = "block" }
fr-clock = { path = "clock" }
fr-codec = { path = "codec/fr-codec" }
fr-codec-derive = { path = "codec/fr-codec-derive" }
fr-common = { path = "common" }
fr-conformance-tests = { path = "conformance-tests" }
fr-crypto = { path = "crypto" }
fr-db = { path = "db" }
fr-extrinsics = { path = "extrinsics" }
fr-limited-vec = { path = "common/limited-vec" }
fr-merkle = { path = "merkle" }
fr-network = { path = "network" }
fr-node = { path = "node" }
fr-pvm-core = { path = "pvm/pvm-core" }
fr-pvm-host = { path = "pvm/pvm-host" }
fr-pvm-interface = { path = "pvm/pvm-interface" }
fr-pvm-invocation = { path = "pvm/pvm-invocation" }
fr-pvm-types = { path = "pvm/pvm-types" }
fr-state = { path = "state" }
fr-state-merkle = { path = "state/state-merkle" }
fr-storage = { path = "storage" }
fr-transition = { path = "transition" }
# External dependencies
ark-vrf = { version = "0.1.0", features = ["bandersnatch", "ring"] }
async-trait = "0.1.88"
base32 = "0.5.1"
blake2 = "0.10.6"
bit-vec = "0.8.0"
cfg-if = "1.0.0"
clap = { version = "4.5.38", features = ["derive"] }
dashmap = "6.1.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures = "0.3.31"
hex = "0.4.3"
paste = "1.0.15"
proc-macro2 = "1.0.95"
quinn = "0.11.8"
quote = "1.0.40"
rand = "0.8.5"
rcgen = "0.13.2"
rocksdb = { version = "0.23.0", default-features = false, features = ["snappy"] }
rustls = { version = "0.23.27", default-features = false, features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
sha3 = "0.10.8"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["macros", "local-offset"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "time", "env-filter"] }
zeroize = "1.8.1"
