[workspace]
resolver = "2"

members = [
    "block",
    "cli",
    "clock",
    "codec/fr-codec",
    "codec/fr-codec-derive",
    "common",
    "common/erasure-coding",
    "common/limited-vec",
    "config",
    "crypto",
    "db",
    "extrinsics",
    "fuzz",
    "integration",
    "integration/asn-types",
    "merkle",
    "network",
    "node",
    "pvm/pvm-core",
    "pvm/pvm-host",
    "pvm/pvm-interface",
    "pvm/pvm-invocation",
    "pvm/pvm-types",
    "state",
    "state/state-merkle",
    "storage",
    "transition",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# Internal dependencies
fr-block = { path = "block" }
fr-clock = { path = "clock" }
fr-codec = { path = "codec/fr-codec" }
fr-codec-derive = { path = "codec/fr-codec-derive" }
fr-common = { path = "common" }
fr-config = { path = "config" }
fr-crypto = { path = "crypto" }
fr-db = { path = "db" }
fr-erasure-coding = { path = "common/erasure-coding" }
fr-extrinsics = { path = "extrinsics" }
fr-fuzz = { path = "fuzz" }
fr-limited-vec = { path = "common/limited-vec" }
fr-merkle = { path = "merkle" }
fr-network = { path = "network" }
fr-node = { path = "node" }
fr-pvm-core = { path = "pvm/pvm-core" }
fr-pvm-host = { path = "pvm/pvm-host" }
fr-pvm-interface = { path = "pvm/pvm-interface" }
fr-pvm-invocation = { path = "pvm/pvm-invocation" }
fr-pvm-types = { path = "pvm/pvm-types" }
fr-state = { path = "state" }
fr-state-merkle = { path = "state/state-merkle" }
fr-storage = { path = "storage" }
fr-transition = { path = "transition" }
# External dependencies
ark-vrf = { version = "0.1.0", features = ["bandersnatch", "ring"] }
async-trait = "0.1.88"
base32 = "0.5.1"
blake2 = "0.10.6"
bit-vec = "0.8.0"
cfg-if = "1.0.1"
clap = { version = "4.5.42", features = ["derive"] }
dashmap = "6.1.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = "0.3.31"
hex = "0.4.3"
mini-moka = "0.10.3"
paste = "1.0.15"
quinn = "0.11.8"
quote = "1.0.40"
rand = "0.8.5"
rayon = "1.10.0"
reed-solomon-simd = "3.0.1"
regex = "1.11.1"
rcgen = "0.13.2"
rocksdb = { version = "0.23.0", default-features = false, features = ["snappy"] }
rustls = { version = "0.23.31", default-features = false, features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha3 = "0.10.8"
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["macros", "local-offset"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "time", "env-filter"] }
zeroize = "1.8.1"
