[workspace]
resolver = "2"

members = [
    "block",
    "cli",
    "clock",
    "codec/fr-codec",
    "codec/fr-codec-derive",
    "common",
    "common/erasure-coding",
    "common/limited-vec",
    "config",
    "crypto",
    "db",
    "extrinsics",
    "fuzz",
    "integration",
    "merkle",
    "network",
    "node",
    "node-bench",
    "pvm/pvm-core",
    "pvm/pvm-host",
    "pvm/pvm-interface",
    "pvm/pvm-invocation",
    "pvm/pvm-types",
    "state",
    "state/state-merkle-v2",
    "storage",
    "test-utils",
    "test-utils/asn-types",
    "transition",
]

[workspace.package]
version = "0.1.31"
edition = "2021"
license = "Apache-2.0"
authors = ["Junha Park <0xjunha@gmail.com>"]
repository = "https://github.com/fastroll-jam/fastroll"

[workspace.dependencies]
# Internal dependencies
fr-asn-types = { path = "test-utils/asn-types" }
fr-block = { path = "block" }
fr-clock = { path = "clock" }
fr-codec = { path = "codec/fr-codec" }
fr-codec-derive = { path = "codec/fr-codec-derive" }
fr-common = { path = "common" }
fr-config = { path = "config" }
fr-crypto = { path = "crypto" }
fr-db = { path = "db" }
fr-erasure-coding = { path = "common/erasure-coding" }
fr-extrinsics = { path = "extrinsics" }
fr-fuzz = { path = "fuzz" }
fr-limited-vec = { path = "common/limited-vec" }
fr-merkle = { path = "merkle" }
fr-network = { path = "network" }
fr-node = { path = "node" }
fr-pvm-core = { path = "pvm/pvm-core" }
fr-pvm-host = { path = "pvm/pvm-host" }
fr-pvm-interface = { path = "pvm/pvm-interface" }
fr-pvm-invocation = { path = "pvm/pvm-invocation" }
fr-pvm-types = { path = "pvm/pvm-types" }
fr-state = { path = "state" }
fr-state-merkle-v2 = { path = "state/state-merkle-v2" }
fr-storage = { path = "storage" }
fr-test-utils = { path = "test-utils" }
fr-transition = { path = "transition" }
# External dependencies
ark-vrf = { version = "0.1.1", features = ["bandersnatch", "ring"] }
async-trait = "0.1.89"
base32 = "0.5.1"
blake2 = "0.10.6"
bitvec = { version = "1.0.1", features = ["serde"] }
cfg-if = "1.0.3"
clap = { version = "4.5.45", default-features = false, features = ["derive", "std", "help", "usage"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
dashmap = "6.1.0"
ed25519-consensus = "2.1.0"
futures = "0.3.31"
hex = "0.4.3"
mini-moka = "0.10.3"
paste = "1.0.15"
quinn = { version = "0.11.8", default-features = false, features = ["runtime-tokio", "rustls-ring", "bloom"] }
quote = "1.0.40"
rand = "0.8.5"
rayon = "1.11.0"
reed-solomon-simd = "3.0.1"
regex = "1.11.2"
rcgen = { version = "0.13.2", default-features = false, features = ["ring"] }
rocksdb = { version = "0.24.0", default-features = false, features = ["snappy"] }
rustls = { version = "0.23.31", default-features = false, features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha3 = "0.10.8"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
tempfile = "3.21.0"
thiserror = "2.0.16"
time = { version = "0.3.41", features = ["macros", "local-offset"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
tracing = "0.1.41"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "time", "env-filter"] }
zeroize = "1.8.1"

[profile.ci]
inherits = "test"
debug = 1
strip = "debuginfo"
incremental = false

[profile.prod]
inherits = "release"
lto = true
codegen-units = 1
