[package]
name = "rjam-block"
version = "0.1.0"
edition = "2021"

[dependencies]
rjam-clock = { workspace = true }
rjam-codec = { workspace = true }
rjam-common = { workspace = true }
rjam-crypto = { workspace = true }
rjam-db = { workspace = true }
bit-vec = { workspace = true }
thiserror = { workspace = true }