[package]
name = "fr-block"
version = "0.1.0"
edition.workspace = true

[dependencies]
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-crypto = { workspace = true }
fr-db = { workspace = true }
fr-limited-vec = { workspace = true }
bit-vec = { workspace = true }
thiserror = { workspace = true }