[package]
name = "fr-block"
version.workspace = true
edition.workspace = true

[dependencies]
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-crypto = { workspace = true }
fr-db = { workspace = true }
fr-limited-vec = { workspace = true }
bit-vec = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }