[package]
name = "fastroll"
version = "0.1.0"
edition.workspace = true
description = "FastRoll JAM client CLI tool"

[dependencies]
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-crypto = { workspace = true }
fr-fuzz = { workspace = true }
fr-network = { workspace = true }
fr-node = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
