[package]
name = "fastroll"
version.workspace = true
edition.workspace = true
description = "FastRoll JAM client CLI tool"

[dependencies]
fr-common = { workspace = true }
fr-config = { workspace = true }
fr-fuzz = { workspace = true }
fr-node = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
