[package]
name = "fastroll"
description = "FastRoll JAM client CLI tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-common = { workspace = true }
fr-config = { workspace = true }
fr-fuzz = { workspace = true }
fr-node = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
