[package]
name = "fr-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
fr-codec = { workspace = true, features = ["derive"] }
cfg-if = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["tiny"]
tiny = []
small = []
full = []
