[package]
name = "fr-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
fr-codec = { workspace = true, features = ["derive"] }
fr-limited-vec = { workspace = true }
cfg-if = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
tiny = []
small = []
full = []
