[package]
name = "rjam-conformance-tests"
version = "0.1.0"
edition.workspace = true

[dependencies]
rjam-block = { workspace = true }
rjam-codec = { workspace = true }
rjam-common = { workspace = true, features = ["default"] }
rjam-crypto = { workspace = true }
rjam-extrinsics = { workspace = true }
rjam-merkle = { workspace = true }
rjam-pvm-core = { workspace = true }
rjam-pvm-interface = { workspace = true }
rjam-pvm-invocation = { workspace = true }
rjam-pvm-types = { workspace = true }
rjam-state = { workspace = true }
rjam-transition = { workspace = true }
async-trait = { workspace = true }
bit-vec = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.132"
tokio = { workspace = true }
