[package]
name = "rjam-crypto"
version = "0.1.0"
edition.workspace = true

[dependencies]
rjam-common = { workspace = true }
ark-vrf = { workspace = true }
blake2 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
