[package]
name = "fr-crypto"
version = "0.1.0"
edition.workspace = true

[dependencies]
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-limited-vec = { workspace = true }
ark-vrf = { workspace = true }
base32 = { workspace = true }
blake2 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
