[package]
name = "fr-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-limited-vec = { workspace = true }
ark-vrf = { workspace = true }
base32 = { workspace = true }
blake2 = { workspace = true }
ed25519-consensus = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
