[package]
name = "rjam-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rjam-block = { workspace = true }
rjam-codec = { workspace = true }
rjam-common = { workspace = true }
rjam-crypto = { workspace = true }
rjam-types = { workspace = true }
dashmap = { workspace = true }
dotenv = { workspace = true }
hex = { workspace = true }
rocksdb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
