[package]
name = "fr-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-common = { workspace = true }
mini-moka = { workspace = true }
rocksdb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
