[package]
name = "fr-extrinsics"
version.workspace = true
edition.workspace = true

[dependencies]
fr-block = { workspace = true }
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-crypto = { workspace = true }
fr-limited-vec = { workspace = true }
fr-state = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[features]
skip-ancestor-set-validation = []
