[package]
name = "fr-fuzz"
version = "0.1.0"
edition.workspace = true

[dependencies]
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-config = { workspace = true }
fr-block = { workspace = true }
fr-integration = { workspace = true }
fr-node = { workspace = true }
fr-state = { workspace = true }
fr-storage = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
tiny = []
full = []
