[package]
name = "fr-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-config = { workspace = true }
fr-block = { workspace = true }
fr-limited-vec = { workspace = true }
fr-node = { workspace = true }
fr-state = { workspace = true }
fr-storage = { workspace = true }
fr-test-utils = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
tiny = ["fr-common/tiny", "fr-node/tiny"]
full = ["fr-common/full", "fr-node/full"]
