[package]
name = "jam-host-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
jam-codec = { workspace = true }
jam-common = { workspace = true }
jam-crypto = { workspace = true }
jam-state = { workspace = true }
jam-types = { workspace = true }
jam-pvm-core = { workspace = true }
thiserror = { workspace = true }