[package]
name = "fr-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
fr-asn-types = { workspace = true }
fr-block = { workspace = true }
fr-common = { workspace = true }
fr-extrinsics = { workspace = true }
fr-pvm-types = { workspace = true }
fr-state = { workspace = true }
fr-transition = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
fr-codec = { workspace = true }
fr-crypto = { workspace = true }
fr-erasure-coding = { workspace = true }
fr-pvm-invocation = { workspace = true }
fr-test-utils = { workspace = true }
futures = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

[features]
tiny = []
full = []
