[package]
name = "fr-merkle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-crypto = { workspace = true }
thiserror = { workspace = true }