[package]
name = "fr-network"
version.workspace = true
edition.workspace = true

[dependencies]
fr-block = { workspace = true }
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-crypto = { workspace = true }
fr-storage = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
