[package]
name = "fr-node-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dev-dependencies]
fr-node = { workspace = true }
fr-state = { workspace = true }
fr-storage = { workspace = true }
fr-test-utils = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true }

[features]
tiny = []
full = []

[[bench]]
name = "block_importer"
harness = false
