[package]
name = "fr-node"
version = "0.1.0"
edition.workspace = true

[dependencies]
fr-asn-types = { workspace = true }
fr-block = { workspace = true }
fr-clock = { workspace = true }
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-crypto = { workspace = true }
fr-db = { workspace = true }
fr-extrinsics = { workspace = true }
fr-fuzz-target = { workspace = true }
fr-network = { workspace = true }
fr-pvm-invocation = { workspace = true }
fr-state = { workspace = true }
fr-storage = { workspace = true }
fr-transition = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
