[package]
name = "fr-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-block = { workspace = true }
fr-clock = { workspace = true }
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-config = { workspace = true }
fr-crypto = { workspace = true }
fr-extrinsics = { workspace = true }
fr-limited-vec = { workspace = true }
fr-network = { workspace = true }
fr-pvm-invocation = { workspace = true }
fr-state = { workspace = true }
fr-storage = { workspace = true }
fr-transition = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
tiny = []
full = []
