[package]
name = "rjam-pvm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rjam-codec = { workspace = true }
rjam-common = { workspace = true }
rjam-crypto = { workspace = true }
rjam-state = { workspace = true }
rjam-types = { workspace = true }
bit-vec = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }
