[package]
name = "rjam-pvm-invocation"
version = "0.1.0"
edition = "2021"

[dependencies]
rjam-codec = { workspace = true }
rjam-common = { workspace = true }
rjam-crypto = { workspace = true }
rjam-host-interface = { workspace = true }
rjam-pvm = { workspace = true }
rjam-pvm-core = { workspace = true }
rjam-state = { workspace = true }
rjam-types = { workspace = true }
