[package]
name = "rjam-pvm"
version = "0.1.0"
edition = "2021"

[dependencies]
rjam-common = { workspace = true }
rjam-crypto = { workspace = true }
rjam-pvm-core = { workspace = true }
rjam-pvm-hostcall = { workspace = true }
rjam-state = { workspace = true }
rjam-types = { workspace = true }
thiserror = { workspace = true }
