[package]
name = "rjam-state-merkle"
version = "0.1.0"
edition = "2021"

[dependencies]
rjam-codec = { workspace = true }
rjam-common = { workspace = true }
rjam-crypto = { workspace = true }
rjam-db = { workspace = true }
bit-vec = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }