[package]
name = "fr-state"
version.workspace = true
edition.workspace = true

[dependencies]
fr-block = { workspace = true }
fr-clock = { workspace = true }
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-config = { workspace = true }
fr-crypto = { workspace = true }
fr-db = { workspace = true }
fr-limited-vec = { workspace = true }
fr-merkle = { workspace = true }
fr-pvm-types = { workspace = true }
fr-state-merkle = { workspace = true }
async-trait = { workspace = true }
mini-moka = { workspace = true }
paste = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
