[package]
name = "fr-state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-block = { workspace = true }
fr-clock = { workspace = true }
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-config = { workspace = true }
fr-crypto = { workspace = true }
fr-db = { workspace = true }
fr-limited-vec = { workspace = true }
fr-merkle = { workspace = true }
fr-pvm-types = { workspace = true }
fr-state-merkle = { workspace = true }
fr-state-merkle-v2 = { workspace = true }
async-trait = { workspace = true }
bitvec = { workspace = true }
mini-moka = { workspace = true }
paste = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
