[package]
name = "fr-storage"
version.workspace = true
edition.workspace = true

[dependencies]
fr-block = { workspace = true }
fr-common = { workspace = true }
fr-config = { workspace = true }
fr-db = { workspace = true }
fr-state = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }