[package]
name = "fr-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-block = { workspace = true }
fr-common = { workspace = true }
fr-config = { workspace = true }
fr-db = { workspace = true }
fr-state = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }