[package]
name = "fr-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-asn-types = { workspace = true }
fr-block = { workspace = true }
fr-codec = { workspace = true }
fr-common = { workspace = true }
fr-config = { workspace = true }
fr-extrinsics = { workspace = true }
fr-node = { workspace = true }
fr-pvm-core = { workspace = true }
fr-pvm-interface = { workspace = true }
fr-pvm-types = { workspace = true }
fr-state = { workspace = true }
fr-storage = { workspace = true }
fr-transition = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }