[package]
name = "jam-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
jam-common = { workspace = true, features = ["testing"] }
jam-transition = { workspace = true }
jam-types = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0.121"
