[package]
name = "rjam-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
rjam-common = { workspace = true, features = ["testing"] }
rjam-state = { workspace = true }
rjam-transition = { workspace = true }
rjam-types = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0.121"
