[package]
name = "rjam-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
rjam-codec = { workspace = true }
rjam-common = { workspace = true, features = ["default"] }
rjam-crypto = { workspace = true }
rjam-db = { workspace = true }
rjam-extrinsics = { workspace = true }
rjam-merkle = { workspace = true }
rjam-state = { workspace = true }
rjam-state-merkle = { workspace = true }
rjam-transition = { workspace = true }
rjam-types = { workspace = true }
bit-vec = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0.132"
tempfile = "3.14.0"