[package]
name = "rjam-transition"
version = "0.1.0"
edition.workspace = true

[dependencies]
rjam-block = { workspace = true }
rjam-common = { workspace = true }
rjam-crypto = { workspace = true }
rjam-extrinsics = { workspace = true }
rjam-merkle = { workspace = true }
rjam-pvm-invocation = { workspace = true }
rjam-pvm-types = { workspace = true }
rjam-state = { workspace = true }
thiserror = { workspace = true }
