[package]
name = "fr-transition"
version = "0.1.0"
edition.workspace = true

[dependencies]
fr-block = { workspace = true }
fr-common = { workspace = true }
fr-crypto = { workspace = true }
fr-extrinsics = { workspace = true }
fr-merkle = { workspace = true }
fr-pvm-invocation = { workspace = true }
fr-pvm-types = { workspace = true }
fr-state = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }