[package]
name = "fr-transition"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fr-block = { workspace = true }
fr-common = { workspace = true }
fr-crypto = { workspace = true }
fr-extrinsics = { workspace = true }
fr-limited-vec = { workspace = true }
fr-merkle = { workspace = true }
fr-pvm-invocation = { workspace = true }
fr-pvm-types = { workspace = true }
fr-state = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
fuzz = []