[package]
name = "jam-types"
version = "0.1.0"
edition = "2021"

[dependencies]
jam-codec = { workspace = true }
jam-common = { workspace = true }
jam-crypto = { workspace = true }
ark-ec-vrfs = { workspace = true }
bit-vec = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }