[package]
name = "rjam-types"
version = "0.1.0"
edition = "2021"

[dependencies]
rjam-codec = { workspace = true, features = ["derive"] }
rjam-common = { workspace = true }
rjam-crypto = { workspace = true }
rjam-merkle = { workspace = true }
ark-ec-vrfs = { workspace = true }
bit-vec = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }